--- a/client/src/CSS/scss_partials/authentication/_authentication.scss
+++ b/client/src/CSS/scss_partials/authentication/_authentication.scss
@@ -32,6 +32,10 @@
 		width: 1000px;
 	}
 
+	.login-component--condensed {
+		width: 410px;
+	}
+
 	.register-component {
 		position: fixed;
 		top: 50%;
@@ -53,8 +57,15 @@
 		width: 375px;
 		font-family: Verdana, Geneva, sans-serif;
 	}
+	.login-component--condensed form {
+		position: relative;
+		top: auto;
+		right: auto;
+		transform: none;
+		margin: 0px auto;
+	}
 
-	.form--register {
+	.form--centered {
 		right: 50%;
 		transform: translate(50%, -50%);
 	}
@@ -87,12 +98,6 @@
 		font-size: v.$common-slightly-larger-font-size;
 	}
 
-	.form__char-counter {
-		float: right;
-		margin: 4px 2px 0px 0px;
-		font-size: v.$common-slightly-larger-font-size;
-	}
-
 	.form__input-text {
 		// Must be border-box because the zoom on the webpage can resize the border otherwise
 		-webkit-box-sizing: border-box;
@@ -107,12 +112,22 @@
 			v.$mode-common-form-input-border-color-light;
 		border-radius: v.$common-form-input-border-radius;
 		background: v.$mode-common-form-input-background-color-light;
-		padding: 12px 16px;
+		padding: v.$common-form-input-text-padding;
 		width: 100%;
 		font-size: 14px;
 
 		&:focus {
 			border-color: v.$common-register-login-input-text-focus-border-color;
+			border-width: v.$common-form-input-text-focus-border-width;
+			padding: v.$common-form-input-text-focus-padding;
+		}
+	}
+
+	.form__input-text--error {
+		border-color: v.$common-register-login-input-error-border-color;
+
+		&:focus {
+			border-color: v.$common-register-login-input-error-border-color;
 		}
 	}
 
@@ -166,10 +181,21 @@
 		transform: translate(0%, -50%);
 		font-family: Verdana, Geneva, sans-serif;
 	}
+	.login-component--condensed .login-component__intro-container {
+		position: relative;
+		top: auto;
+		left: auto;
+		transform: none;
+		margin-bottom: 50px;
+	}
 
 	.login-component__intro-container__logo {
 		display: block;
 		width: 400px;
+		margin: 0px auto;
+	}
+	.login-component--condensed .login-component__intro-container__logo {
+		width: 250px;
 	}
 
 	.login-component__intro-container__description {
@@ -179,5 +205,8 @@
 		font-size: 26px;
 		font-weight: 500;
 		line-height: 36px;
+	}
+	.login-component--condensed .login-component__intro-container__description {
+		display: none;
 	}
 }
