Laid groundwork to add a NavPanel

--- a/client/src/CSS/scss_partials/home/menu/navbar/_breadcrumb.scss
+++ b/client/src/CSS/scss_partials/home/menu/navbar/_breadcrumb.scss
@@ -1,5 +1,5 @@
-@use "../../utils/variables" as v;
-@use "../../utils/mixins" as m;
+@use "../../../utils/variables" as v;
+@use "../../../utils/mixins" as m;
 
 // SCSS for classNames only used by the breadcrumb component
 .navbar-breadcrumb-component,
