--- a/client/src/CSS/scss_partials/home/menu/navbar/_hamburger.scss
+++ b/client/src/CSS/scss_partials/home/menu/navbar/_hamburger.scss
@@ -1,5 +1,5 @@
-@use "../../utils/variables" as v;
-@use "../../utils/mixins" as m;
+@use "../../../utils/variables" as v;
+@use "../../../utils/mixins" as m;
 
 // SCSS for classNames only used by the hamburger component
 .navbar-hamburger-component,
