--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTopBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTopBar.scss
@@ -5,15 +5,13 @@
 .js-get-list-view-top-bar-component {
 	@include m.full-width-minus-nav-panel();
 
-	// Must be more than table header so filter button can overlap
+	// z-index must be more than table header so filter button can overlap
 	z-index: 1;
 	position: fixed;
 	top: v.$common-top-bar-top;
 	left: v.$common-left;
-	border: v.$common-top-bar-border-width solid
+	border-bottom: v.$common-top-bar-border-width solid
 		v.$mode-common-top-bar-border-color-light;
-	border-left: none;
-	border-right: none;
 	background-color: v.$mode-common-top-bar-background-color-light;
 	height: v.$common-top-bar-height;
 	font-family: Arial, Helvetica, sans-serif;
@@ -137,7 +135,7 @@
 	.list-view-top-bar-filter-button-component {
 		@include m.stop-text-selection();
 
-		// Must be more than list-view-top-bar-filter-dropdown-component so its
+		// z-index must be more than list-view-top-bar-filter-dropdown-component so its
 		// top border can be covered to make the two containers look like one
 		z-index: 1;
 		position: absolute;
