--- a/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
@@ -12,7 +12,7 @@
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
 
-		// Must be more than accountBlurredBackdrop.scss
+		// z-index must be more than accountBlurredBackdrop.scss
 		z-index: 4;
 		position: fixed;
 		top: v.$navbar-height;
