--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -313,9 +313,19 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: black;
+  background-color: #608d9e;
   height: 100%;
   width: 250px;
+}
+.nav-panel .top-container {
+  height: 56px;
+  border-bottom: 1px solid black;
+}
+.nav-panel .top-container__logo {
+  display: block;
+  width: 150px;
+  margin: 0px auto;
+  padding-top: 10px;
 }
 
 .navbar-container {
@@ -328,6 +338,7 @@
   height: 56px;
 }
 .navbar-container .navbar {
+  border-bottom: 1px solid black;
   background-color: #608d9e;
   height: 56px;
   width: 100%;
@@ -1952,10 +1963,9 @@ dropdown can overlap all other components
   width: calc(100% - 250px);
   z-index: 2;
   position: fixed;
-  top: 56px;
+  top: 57px;
   left: 250px;
-  border: 1px solid black;
-  border-width: 1px 0 2px 0;
+  border-bottom: 1px solid black;
   background-color: #e5e5e5;
   height: 46px;
   font-family: Arial, Helvetica, sans-serif;
@@ -2464,11 +2474,9 @@ dropdown can overlap all other components
   width: calc(100% - 250px);
   z-index: 1;
   position: fixed;
-  top: 56px;
+  top: 57px;
   left: 250px;
-  border: 1px solid black;
-  border-left: none;
-  border-right: none;
+  border-bottom: 1px solid black;
   background-color: #e5e5e5;
   height: 46px;
   font-family: Arial, Helvetica, sans-serif;
