Refactored and cleaned up some code

--- a/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanel.scss
+++ b/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanel.scss
@@ -1,7 +1,7 @@
 @use "../../../utils/variables" as v;
 @use "../../../utils/mixins" as m;
 
-.nav-panel {
+.nav-panel-component {
 	position: fixed;
 	top: 0;
 	left: 0;
