--- a/client/src/CSS/styles.scss
+++ b/client/src/CSS/styles.scss
@@ -8,6 +8,7 @@
 @use "scss_partials/home/home";
 // scss_partials/home/menu/nav-panel
 @use "scss_partials/home/menu/nav-panel/navPanel";
+@use "scss_partials/home/menu/nav-panel/navPanelTableAndRows";
 // scss_partials/home/menu/navbar
 @use "scss_partials/home/menu/navbar/navbar";
 @use "scss_partials/home/menu/navbar/breadcrumb";
