--- a/client/src/CSS/scss_partials/home/menu/navbar/_navbar.scss
+++ b/client/src/CSS/scss_partials/home/menu/navbar/_navbar.scss
@@ -1,22 +1,15 @@
 @use "../../../utils/variables" as v;
 @use "../../../utils/mixins" as m;
 
-// SCSS for classNames shared by the navbar, breadcrumb, and hamburger components
-.navbar-container {
+.navbar-component {
 	@include m.full-width-minus-nav-panel();
-	
+
 	position: fixed;
 	top: 0;
 	left: v.$common-left;
+	border-bottom: v.$navbar-border-width solid v.$mode-navbar-border-color-light;
+	background-color: v.$default-theme-common-standard-border-background-color;
 	height: v.$navbar-height;
-	
-
-	.navbar {
-		border-bottom: v.$navbar-border-width solid v.$mode-navbar-border-color-light;
-		background-color: v.$default-theme-common-standard-border-background-color;
-		height: v.$navbar-height;
-		width: 100%;
-	}
 
 	.navbar__account-button {
 		// Postion absolute instead of float right so that account button
